--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,11 @@
   "compilerOptions": {
     "target": "es6",
     "lib": ["es6", "dom"],
-    "strict": false,
-    "typeRoots": [
-      "./node_modules/@types",
-      "./node_modules/@figma"
-    ],
-    "skipLibCheck": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
+    "typeRoots": ["./node_modules/@types", "./node_modules/@figma"],
     "moduleResolution": "node",
+    "strict": true,
+    "jsx": "react",
+    "outDir": "dist",
     "esModuleInterop": true
   }
 } 
