Correspondencia exata no match

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/code.js",
   "scripts": {
     "build": "webpack --mode=production",
+    "build-force": "TS_NODE_TRANSPILE_ONLY=true webpack --mode=production",
     "dev": "webpack --mode=development --watch"
   },
   "author": "",
