--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "jsx": "react",
     "outDir": "dist",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "noEmitOnError": false
   }
 } 
